<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/appBackground"
        tools:context=".ProductListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/review_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8dp">

            <TextView
                android:id="@+id/rating_this_text"
                android:layout_width="@dimen/width_150dp"
                android:layout_height="@dimen/height_30dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:gravity="center|start"
                android:text="@string/rate_this_product"
                android:textColor="?attr/primaryText"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RatingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/review_edit_Text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_80dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:autofillHints="@string/write_the_review"
                android:background="@drawable/bottom_review_background"
                android:gravity="top|start"
                android:hint="@string/write_the_review"
                android:inputType="text"
                android:padding="@dimen/padding_8dp"
                android:textColor="?attr/primaryText"
                android:textColorHint="?attr/secondaryText"
                android:theme="@style/EditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_this_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_16dp"
                android:text="@string/cancel"
                android:textColor="?attr/primaryColor"
                app:backgroundTint="?attr/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review_edit_Text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_16dp"
                android:text="@string/submit"
                android:textColor="?attr/white"
                app:backgroundTint="?attr/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/review_edit_Text" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>